--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "pranavj",
     "public": "public",
     "ignore": [
       "firebase.json",
@@ -20,6 +21,8 @@
       }
     ]
   },
+
+  
   "remoteconfig": {
     "template": "remoteconfig.template.json"
   }
